--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <nav class="navbar">
         <ul class="nav-ul">
           <li class="nav-list">
-            <a href="index.html" class="a-list">OPEXX</a>
+            <a href="/Opexx-web/index.html" class="a-list">OPEXX</a>
           </li>
           <li class="nav-list">
-            <a href=search/search.html class="a-list"
+            <a href=/Opexx-web/search/search.html class="a-list"
               >SEARCH</a
             >
           </li>
-          <li class="nav-list"><a href="pricing/pricing.html" class="a-list">PRICING</a></li>
+          <li class="nav-list"><a href="/Opexx-web/pricing/pricing.html" class="a-list">PRICING</a></li>
         </ul>
       </nav>
 
