--- a/search/winners.html
+++ b/search/winners.html
@@ -11,13 +11,13 @@
     <nav class="navbar">
       <ul class="nav-ul">
         <li class="nav-list">
-          <a href="/index.html" class="a-list">OPEXX</a>
+          <a href="/Opexx-web/index.html" class="a-list">OPEXX</a>
         </li>
         <li class="nav-list">
-          <a href="/search/search.html" class="a-list">SEARCH</a>
+          <a href="/Opexx-web/search/search.html" class="a-list">SEARCH</a>
         </li>
         <li class="nav-list">
-          <a href="/pricing/pricing.html" class="a-list">PRICING</a>
+          <a href="/Opexx-web/pricing/pricing.html" class="a-list">PRICING</a>
         </li>
       </ul>
     </nav>
@@ -29,10 +29,12 @@
 
     <div class="header-div">
       <ul class="flex">
-        <a class="header-li" href="/search/search.html"
+        <a class="header-li" href="/Opexx-web/search/search.html"
           ><li>Live Tenders</li></a
         >
-        <a class="header-li" href="/search/winners.html"><li>Winners</li></a>
+        <a class="header-li" href="/Opexx-web/search/winners.html"
+          ><li>Winners</li></a
+        >
       </ul>
       <div class="header-p">
         <p class="header-div-p">
