--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -11,12 +11,12 @@
     <nav class="navbar">
       <ul class="nav-ul">
         <li class="nav-list">
-          <a href="/index.html" class="a-list">OPEXX</a>
+          <a href="/Opexx-web/index.html" class="a-list">OPEXX</a>
         </li>
         <li class="nav-list">
-          <a href="/search/search.html" class="a-list">SEARCH</a>
+          <a href="/Opexx-web/search/search.html" class="a-list">SEARCH</a>
         </li>
-        <li class="nav-list"><a href="/pricing/pricing.html" class="a-list">PRICING</a></li>
+        <li class="nav-list"><a href="/Opexx-web/pricing/pricing.html" class="a-list">PRICING</a></li>
       </ul>
     </nav>
 
@@ -49,7 +49,7 @@
            <header class="card-head">
                <h3 class="card-h3-top">Advanced</h3>
                <img src="/pricing/img/card_car.png" alt="car imgs" class="card-img"/>
-               <h5 class="card-h5"><b class="card-5-first">99<sup>€</sup></b> <b          class="card-5-second">/month</b></h5>
+               <h5 class="card-h5"><b class="card-5-first">99<sup>€</sup></b> <b class="card-5-second">/month</b></h5>
                </h4>
 
                <a href="#" class="card-btn">START FREE TRAYAL</a>
