--- a/search/search.html
+++ b/search/search.html
@@ -11,13 +11,13 @@
     <nav class="navbar">
       <ul class="nav-ul">
         <li class="nav-list">
-          <a href="/index.html" class="a-list">OPEXX</a>
+          <a href="/Opexx-web/index.html" class="a-list">OPEXX</a>
         </li>
         <li class="nav-list">
-          <a href="/search/search.html" class="a-list">SEARCH</a>
+          <a href="/Opexx-web/search/search.html" class="a-list">SEARCH</a>
         </li>
         <li class="nav-list">
-          <a href="/pricing/pricing.html" class="a-list">PRICING</a>
+          <a href="/Opexx-web/pricing/pricing.html" class="a-list">PRICING</a>
         </li>
       </ul>
     </nav>
@@ -30,7 +30,7 @@
     <div class="header-div">
       <ul class="flex">
         <a class="header-li" href="#"><li>Live Tenders</li></a>
-        <a class="header-li" href="http://127.0.0.1:5502/search/winners.html"
+        <a class="header-li" href="/Opexx-web/search/winners.html"
           ><li>Winners</li></a
         >
       </ul>
